[gd_scene load_steps=48 format=2]

[ext_resource path="res://Imagens/Restart.png" type="Texture" id=1]
[ext_resource path="res://Imagens/AnimaÃ§Ã£o Palmeira.png" type="Texture" id=2]
[ext_resource path="res://Imagens/voltar-2.png.png" type="Texture" id=3]
[ext_resource path="res://Imagens/Botao-voltar-pressionado.png" type="Texture" id=4]
[ext_resource path="res://Imagens/caixa_pergunta.png" type="Texture" id=5]
[ext_resource path="res://Imagens/arbusto 2.png" type="Texture" id=6]
[ext_resource path="res://Imagens/Arbusto 4.png" type="Texture" id=7]
[ext_resource path="res://Imagens/Botao-X.png" type="Texture" id=8]
[ext_resource path="res://Imagens/Arbusto 3.png" type="Texture" id=9]
[ext_resource path="res://Imagens/Areia da praia com malha quadriculada.png" type="Texture" id=10]
[ext_resource path="res://Imagens/Lixos/Lixo 10-2.png (2).png" type="Texture" id=11]
[ext_resource path="res://Level.tscn" type="PackedScene" id=12]
[ext_resource path="res://Fonts/PixelOperator-Bold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Imagens/Guarda sol com esteira.png" type="Texture" id=14]
[ext_resource path="res://Imagens/Guarda sol com cadeira.png" type="Texture" id=15]
[ext_resource path="res://Imagens/AGUA ANIMADA.png" type="Texture" id=16]
[ext_resource path="res://Imagens/Arbusto 1.png" type="Texture" id=17]
[ext_resource path="res://Imagens/Estrela e concha.png" type="Texture" id=18]
[ext_resource path="res://Imagens/barco_bandeira (1).png" type="Texture" id=19]
[ext_resource path="res://Imagens/Carrinho de sorvete.png" type="Texture" id=20]
[ext_resource path="res://Imagens/Baldinho de areia.png" type="Texture" id=21]
[ext_resource path="res://Minigame4.gd" type="Script" id=22]
[ext_resource path="res://Imagens/botao_start-1.png (1).png" type="Texture" id=23]
[ext_resource path="res://Imagens/Botao-start-pressionado.png" type="Texture" id=24]
[ext_resource path="res://Tela de pontuacao.tscn" type="PackedScene" id=25]
[ext_resource path="res://Imagens/Lixos/lixo 5-2.png (1).png" type="Texture" id=26]
[ext_resource path="res://Imagens/Lixos/Lixo 7-2.png (1).png" type="Texture" id=27]
[ext_resource path="res://coin.tscn" type="PackedScene" id=28]
[ext_resource path="res://Imagens/Lixos/Lixo 9-2.png.png" type="Texture" id=29]

[sub_resource type="Animation" id=1]
resource_name = "Agua-animada"
length = 3.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.6, 1.9, 2.2, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5, 6, 7, 8, 7, 6, 8, 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Palmeira"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.4, 1.6, 1.8, 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Palmeira"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1.1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Barco"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="CircleShape2D" id=16]
radius = 37.0

[sub_resource type="CircleShape2D" id=17]
radius = 36.7307

[sub_resource type="CircleShape2D" id=18]
radius = 37.2

[sub_resource type="CircleShape2D" id=19]
radius = 38.7097

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 213, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14.625, 375.75 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16.125, 374 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 195.5, 4.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 30.625, 37 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 65.75, 71 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 34.5, 99.5 )

[sub_resource type="Theme" id=14]

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 13 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 22 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 401.0
margin_top = -14.0
margin_right = 519.0
margin_bottom = 801.0
color = Color( 0.854902, 0.745098, 0.627451, 1 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_left = 0.334
anchor_top = 0.104
anchor_right = 0.334
anchor_bottom = 0.104
margin_left = -33.412
margin_top = -62.76
margin_right = 19.588
margin_bottom = 721.24
color = Color( 0.392157, 0.231373, 0.0705882, 1 )

[node name="map_minigame" type="Sprite" parent="."]
position = Vector2( 203, 365 )
scale = Vector2( 0.653884, 0.653883 )
texture = ExtResource( 10 )

[node name="Arbusto-1" type="Sprite" parent="."]
position = Vector2( 339, 174 )
scale = Vector2( 2.0875, 2.0875 )
texture = ExtResource( 17 )

[node name="Arbusto-2" type="Sprite" parent="."]
position = Vector2( 40, 239 )
scale = Vector2( 2.13, 2.13 )
texture = ExtResource( 6 )

[node name="Arbusto-3" type="Sprite" parent="."]
position = Vector2( 320.5, 40.5 )
scale = Vector2( 1.925, 1.925 )
texture = ExtResource( 9 )

[node name="Arbusto-4" type="Sprite" parent="."]
position = Vector2( 68, 84 )
scale = Vector2( 2.01, 2.01 )
texture = ExtResource( 7 )

[node name="Estrela" type="Sprite" parent="."]
position = Vector2( 199, 137 )
scale = Vector2( 1.20375, 1.20375 )
texture = ExtResource( 18 )

[node name="Carrinho" type="Sprite" parent="."]
position = Vector2( 171, 406 )
scale = Vector2( 2.0875, 2.0875 )
texture = ExtResource( 20 )

[node name="Balde-praia" type="Sprite" parent="."]
position = Vector2( 97, 309 )
scale = Vector2( 2.0875, 2.0875 )
texture = ExtResource( 21 )

[node name="Guardasol" type="Sprite" parent="."]
position = Vector2( 364, 242 )
scale = Vector2( 2.01, 2.01 )
texture = ExtResource( 14 )

[node name="Guardasol-2" type="Sprite" parent="."]
position = Vector2( 97.6976, 643.946 )
scale = Vector2( 2.11834, 1.96638 )
texture = ExtResource( 15 )

[node name="Agua-animada" type="Sprite" parent="."]
position = Vector2( 202.5, 366.146 )
scale = Vector2( 0.973301, 0.973301 )
texture = ExtResource( 16 )
hframes = 3
vframes = 3
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Agua-animada"]
anims/Agua-animada = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Palmeira-3" type="Sprite" parent="."]
position = Vector2( 44.0675, 84.3588 )
scale = Vector2( -0.618199, 0.656016 )
texture = ExtResource( 2 )
hframes = 2
vframes = 3
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Palmeira-3"]
root_node = NodePath("../../Palmeira-3")
anims/Palmeira = SubResource( 3 )

[node name="Palmeira-2" type="Sprite" parent="."]
position = Vector2( 355.383, 88.1254 )
scale = Vector2( 0.698402, 0.69316 )
texture = ExtResource( 2 )
hframes = 2
vframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Palmeira-2"]
root_node = NodePath("../../Palmeira-2")
anims/Palmeira = SubResource( 4 )

[node name="barco" type="Sprite" parent="."]
position = Vector2( 304, 384 )
scale = Vector2( 0.124163, 0.115257 )
texture = ExtResource( 19 )
hframes = 4
vframes = 4
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="barco"]
anims/Barco = SubResource( 6 )

[node name="coin2" parent="." instance=ExtResource( 28 )]
position = Vector2( 300, 495 )
scale = Vector2( 0.723958, 0.723958 )
texture = ExtResource( 27 )

[node name="ruim" type="Area2D" parent="coin2" groups=["desconto"]]

[node name="ruim2" type="CollisionShape2D" parent="coin2/ruim" groups=["desconto"]]
position = Vector2( 6, 6 )
shape = SubResource( 16 )

[node name="coin3" parent="." instance=ExtResource( 28 )]
position = Vector2( 168, 228 )
scale = Vector2( 0.79, 0.79 )
texture = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="coin3" groups=["pilha"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin3/Area2D" groups=["pilha"]]
position = Vector2( 6.32912, 5.06326 )
shape = SubResource( 17 )

[node name="coin4" parent="." instance=ExtResource( 28 )]
position = Vector2( 161, 294 )
scale = Vector2( 0.78375, 0.78375 )
texture = ExtResource( 27 )

[node name="Area2D" type="Area2D" parent="coin4" groups=["desconto"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin4/Area2D" groups=["desconto"]]
position = Vector2( 5.68184, 4.54547 )
shape = SubResource( 16 )

[node name="coin5" parent="." instance=ExtResource( 28 )]
position = Vector2( 236, 562 )
scale = Vector2( 0.865, 0.865 )
texture = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="coin5" groups=["pilha"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin5/Area2D" groups=["pilha"]]
position = Vector2( 6.32912, 5.06326 )
shape = SubResource( 17 )

[node name="coin6" parent="." instance=ExtResource( 28 )]
position = Vector2( 99, 496 )
scale = Vector2( 0.679687, 0.679687 )
texture = ExtResource( 29 )

[node name="Area2D" type="Area2D" parent="coin6" groups=["maca"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin6/Area2D" groups=["maca"]]
position = Vector2( 6, 4.79993 )
shape = SubResource( 18 )

[node name="coin7" parent="." instance=ExtResource( 28 )]
position = Vector2( 32, 359 )
scale = Vector2( 0.68, 0.68 )
texture = ExtResource( 29 )

[node name="Area2D" type="Area2D" parent="coin7" groups=["maca"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin7/Area2D" groups=["maca"]]
position = Vector2( 6, 4.79993 )
shape = SubResource( 18 )

[node name="coin8" parent="." instance=ExtResource( 28 )]
position = Vector2( 163, 428 )
scale = Vector2( 0.678333, 0.678333 )
texture = ExtResource( 26 )

[node name="Area2D" type="Area2D" parent="coin8" groups=["desconto"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin8/Area2D" groups=["desconto"]]
position = Vector2( 6.4516, 3.87093 )
shape = SubResource( 19 )

[node name="coin9" parent="." instance=ExtResource( 28 )]
position = Vector2( 369, 357 )
scale = Vector2( 0.68, 0.68 )
texture = ExtResource( 29 )

[node name="Area2D" type="Area2D" parent="coin9" groups=["maca"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin9/Area2D" groups=["maca"]]
position = Vector2( 6, 4.79993 )
shape = SubResource( 18 )

[node name="coin10" parent="." instance=ExtResource( 28 )]
position = Vector2( 367, 298 )
scale = Vector2( 0.7825, 0.7825 )
texture = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="coin10" groups=["pilha"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin10/Area2D" groups=["pilha"]]
position = Vector2( 6.32912, 5.06326 )
shape = SubResource( 17 )

[node name="Fundo" parent="." instance=ExtResource( 12 )]
position = Vector2( 19, 14 )
scale = Vector2( 0.963007, 0.963007 )

[node name="colisionBoard" type="StaticBody2D" parent="."]

[node name="limitadorBorda" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 206, 67 )
shape = SubResource( 7 )

[node name="limitadorBorda2" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 3.375, 382 )
shape = SubResource( 8 )

[node name="limitadorBorda3" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 417, 371 )
shape = SubResource( 9 )

[node name="limitadorBorda4" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 205, 710 )
shape = SubResource( 10 )

[node name="obstaculo" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 101.75, 630 )
shape = SubResource( 11 )

[node name="obstaculo2" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 369, 236 )
shape = SubResource( 11 )

[node name="obstaculo3" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 166, 361 )
shape = SubResource( 11 )

[node name="obstaculo4" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 102, 300 )
shape = SubResource( 11 )

[node name="obstaculo5" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 38, 226 )
shape = SubResource( 11 )

[node name="obstaculo6" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 105, 163 )
shape = SubResource( 11 )

[node name="obstaculo7" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 41, 98 )
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 335.25, 133 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 305, 366.5 )
shape = SubResource( 13 )

[node name="Button2" type="TextureButton" parent="."]
margin_left = 17.0
margin_top = 10.0
margin_right = 212.0
margin_bottom = 205.0
rect_rotation = 180.0
rect_scale = Vector2( -0.279999, -0.279999 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="WindowDialog" type="Sprite" parent="."]
visible = false
position = Vector2( 220, 377 )
scale = Vector2( 0.559091, 0.559091 )
texture = ExtResource( 5 )

[node name="RichTextLabel" type="Label" parent="WindowDialog"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = -0.26441
anchor_top = -8.06808e-05
anchor_right = 0.12953
anchor_bottom = 0.10901
margin_left = -54.9723
margin_top = -54.9645
margin_right = -82.9726
margin_bottom = -39.9644
rect_scale = Vector2( 2, 2 )
theme = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
text = "
"
autowrap = true

[node name="closePopup" type="TextureButton" parent="WindowDialog"]
margin_left = 189.655
margin_top = 58.7932
margin_right = 603.655
margin_bottom = 423.793
rect_scale = Vector2( 0.279886, 0.279886 )
texture_normal = ExtResource( 8 )

[node name="restart" type="TextureButton" parent="WindowDialog"]
margin_left = 127.069
margin_top = 68.2759
margin_right = 745.069
margin_bottom = 686.276
rect_scale = Vector2( 0.123529, 0.123529 )
texture_normal = ExtResource( 1 )

[node name="Node2D" parent="WindowDialog" instance=ExtResource( 25 )]
position = Vector2( -277.236, -110.894 )

[node name="Next" type="TextureButton" parent="WindowDialog"]
margin_left = 202.114
margin_top = 69.7561
margin_right = 793.114
margin_bottom = 660.756
rect_scale = Vector2( 0.132837, 0.132837 )
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )

[node name="restart" type="TextureButton" parent="."]
margin_left = 71.0
margin_top = 3.0
margin_right = 689.0
margin_bottom = 621.0
rect_scale = Vector2( 0.0837832, 0.0837832 )
texture_normal = ExtResource( 1 )

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="WindowDialog/closePopup" to="." method="_on_closePopup_pressed"]
[connection signal="pressed" from="WindowDialog/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="WindowDialog/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
